--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+*, 
+*::after, 
+*::before {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
