--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,17 @@
     padding: 0;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 html,
 body {
     height: 100%;
