--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,15 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-*, 
-*::after, 
+*,
+*::after,
 *::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 input::-webkit-outer-spin-button,
@@ -19,28 +19,33 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
 html,
 body,
 #__next {
-    height: 100%;
-    font-family: Inter;
+  height: 100%;
+  font-family: Inter;
+}
+
+.MuiTableContainer-root::-webkit-scrollbar {
+  @apply w-[6px] h-[6px] bg-lt-primary-main/10 rounded-md;
+}
+
+.MuiTableContainer-root::-webkit-scrollbar-thumb {
+  @apply bg-lt-primary-main/75 rounded-[8px];
 }
 
 @layer components {
-    .swiper-bullet
-    {
-        @apply inline-block cursor-pointer rounded-full h-1.5 aspect-square bg-lt-accent-main/25 transition-all;
-    }
-    .swiper-bullet-active
-    {
-        @apply bg-lt-accent-main aspect-[3/1] h-1.5;
-    }
-    .border-pre-flight
-    {
-        @apply border-0 border-solid;
-    }
+  .swiper-bullet {
+    @apply inline-block cursor-pointer rounded-full h-1.5 aspect-square bg-lt-accent-main/25 transition-all;
+  }
+  .swiper-bullet-active {
+    @apply bg-lt-accent-main aspect-[3/1] h-1.5;
+  }
+  .border-pre-flight {
+    @apply border-0 border-solid;
+  }
 }
