--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@
   --border: 220 220 220;
   --primary: 255 62 21;
   --success: 16 243 84;
-  --fail: 239 38 38;
+  --error: 239 38 38;
   --warning: 244 187 32;
 }
 
@@ -24,6 +24,6 @@
   --background: 49 49 49;
   --foreground: 255 255 255;
   --border: 96 96 96;
-  --fail: 239 38 38;
+  --error: 239 38 38;
   --warning: 244 187 32;
 }
