--- a/styles/global.css
+++ b/styles/global.css
@@ -27,6 +27,8 @@
   --background: 255 255 255;
   --border: 220 220 220;
   --primary: 255 62 21;
+  /* --primary: 92 242 122; */
+  
   --success: 16 243 84;
   --error: 239 38 38;
   --warning: 244 187 32;
@@ -36,6 +38,7 @@
   --background: 49 49 49;
   --foreground: 255 255 255;
   --border: 96 96 96;
+  --primary: 255 93 58;
   --error: 239 38 38;
   --warning: 244 187 32;
 }
