--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,6 +9,7 @@
   body {
     width: 100%;
     height: 100%;
+    font-family: Inter, "IBM Plex Sans Arabic";
   }
 }
 
@@ -28,7 +31,7 @@
   --border: 220 220 220;
   --primary: 255 62 21;
   /* --primary: 92 242 122; */
-  
+
   --success: 16 243 84;
   --error: 239 38 38;
   --warning: 244 187 32;
