--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;200;300;400;500;600;700&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Noto+Sans+Arabic:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -9,7 +9,7 @@
   body {
     width: 100%;
     height: 100%;
-    font-family: Inter, "IBM Plex Sans Arabic";
+    font-family: Inter, "Noto Sans Arabic";
   }
 }
 
